--- a/source/aws-bootstrap-kit/package.json
+++ b/source/aws-bootstrap-kit/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "aws-bootstrap-kit",
-  "version": "0.7.6",
+  "name": "@naakwu/aws-bootstrap-kit",
+  "version": "0.7.7-beta",
   "repository": {
-    "url": "https://github.com/awslabs/aws-bootstrap-kit",
+    "url": "https://github.com/Naakwu/aws-bootstrap-kit",
     "type": "git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/Naakwu"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
