--- a/source/aws-bootstrap-kit/package.json
+++ b/source/aws-bootstrap-kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naakwu/aws-bootstrap-kit",
-  "version": "0.7.7-beta",
+  "version": "0.7.7",
   "repository": {
     "url": "https://github.com/Naakwu/aws-bootstrap-kit",
     "type": "git"
